added coverage badge and pytest-cov support

--- a/.README.md
+++ b/.README.md
@@ -1,1 +1,5 @@
  
+## ✅ Build & Coverage
+
+[![Unit Tests](https://github.com/planeflake/sworn/actions/workflows/test.yml/badge.svg)](https://github.com/planeflake/sworn/actions)
+[![codecov](https://codecov.io/gh/planeflake/sworn/branch/main/graph/badge.svg)](https://codecov.io/gh/planeflake/sworn)
